# hatch-deps-selector

./: LICENSE.txt  README.md  pyproject.toml
.github/workflows/: cd.yml
src/hatch_deps_selector/: __about__.py  hooks.py  plugin.py
tests/: __init__.py
